--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>Django Central</title>
+  <title>Innovaccer Assignment</title>
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
@@ -21,7 +21,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" id="mainNav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">Innovacer Assignment</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Innovaccer Assignment</a>
     </div>
   </nav>
 
